--- a/Unit4/gyro/index.html
+++ b/Unit4/gyro/index.html
@@ -11,11 +11,12 @@
 
 	<!-- p5js -->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
 
 
+	<button id="request" style="height: 200px; width: 200px; margin: 50px auto;">Click this button to request gyro and accel permission</button>
 
 	<script>
 		// if (location.protocol != 'https:') {
